Doc: fix github logo & signer-workflow picture in dark mode

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -53,6 +53,10 @@
     width: 24px;
 }
 
+[data-theme='dark'] .header-github-link {
+    filter: invert(1);
+}
+
 @media screen and (max-width: 996px) {
     .footer {
         text-align: center;
